# rust-filehash-app

./: .gitignore  package.json
contract/: Cargo.toml  build.js  build.sh
contract/res/: near_file_hash.wasm
contract/src/: lib.rs  test_utils.rs
src/: App.css  App.js  config.js  index.html  index.js
